# ai-recruiter

./: .env.example  .gitignore  .pre-commit-config.yaml  HANDOFF_BRIEF.md  LICENSE  Makefile  README.md  alembic.ini  keycrm_mapping.json  pyproject.toml
.github/workflows/: ci.yml
ci/: ci.yml.template
deploy/: Caddyfile  Dockerfile  docker-compose.yml
docs/: call_script_v1_kozyr_trans.md  candidate_profile.md  consent_legal.md  keycrm_schema.md  ringostat_research.md  vapi_config.json  workua_api_integration.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_enums.py  0003_enum_to_varchar.py
scripts/: cloudflare_dns_setup.py  init_db.sh  keycrm_audit.py  keycrm_audit2.py  keycrm_audit3.py  keycrm_bootstrap.py  keycrm_probe.py  patch_eva.py  sops_init.sh  vps_bootstrap.sh  workua_kalen.py
src/api/: inbound_router.py  main.py  schemas.py  services.py
src/bot/: admin.py  main.py  report.py
src/call/: fsm.py  orchestrator.py  script_template.py  summarizer.py  vapi_client.py
src/common/: db.py  keycrm.py  keycrm_fields.py  models.py  phone.py  regions.py  settings.py
src/cost/: pricing.py  tracker.py
src/guardrails/: exit.py  profanity.py  repetition.py
src/integrations/: base.py  jooble_api.py  olx_jobs_sync.py  registry.py  robotaua_api.py  robotaua_sync.py  workua_api.py  workua_sync.py
tests/: test_cost.py  test_fsm.py  test_guardrails.py  test_keycrm_fields.py  test_match.py  test_phone.py  test_profile_filter.py  test_regions.py  test_report_format.py  test_script_template.py  test_summarizer.py  test_workua_api.py
(+6 files in other folders)
